# craftos-esp

./: .gitmodules  CMakeLists.txt  README.md  diagram.json  mkmmfs.c  partitions.csv  sdkconfig  wokwi.toml
main/: CMakeLists.txt  badapple.c  common.c  common.h  event.c  event.h  idf_component.yml  llock.c  machine.c  main.c
main/api/: fs.c  fs_handle.c  fs_handle.h  http.c  os.c  peripheral.c  redstone.c  term.c  wifi.c
main/driver/: audio.c  audio.h  bootldr.c  bootldr.h  hid.c  hid.h  storage.c  storage.h  vga.c  vga.h  wifi.c  wifi.h
main/module/: font.h  mmfs.c  mmfs.h  redstone.c  redstone.h  terminal.c  terminal.h
main/peripheral/: drive.c  modem.c  speaker.c
